Updated Travis build matrix to run integration test only on JDK 1.8